@@ -449,7 +449,7 @@ void registerFeatureExtractPass(void) {
 }
 
 unsigned featureExtractExecute() {
-	std::string func_name = current_function_name();
+  std::string func_name = current_function_name();
 
   std::unique_ptr<FunctionFeatures> features = extractFunctionFeatures();  
 
@@ -471,7 +471,7 @@ void featureExtractFinishUnit(void *, void *) {
 
   // Extract module features based on the function features, convert to a
   // mageec feature set
-	std::string module_name = main_input_filename;
+  std::string module_name = main_input_filename;
 
   std::unique_ptr<ModuleFeatures> module_features =
       extractModuleFeatures(func_features);
@@ -481,11 +481,11 @@ void featureExtractFinishUnit(void *, void *) {
   mageec::FeatureSetID module_feature_set_id =
       getContext().getDatabase().newFeatureSet(*module_feature_set);
   mageec::FeatureGroupID module_feature_group_id =
-			getContext().getDatabase().newFeatureGroup({module_feature_set_id});
+      getContext().getDatabase().newFeatureGroup({module_feature_set_id});
 
   getContext().getOutFile() << main_input_filename << ",module,"
-                  					<< module_name << ",feature_group,"
-                  					<< (uint64_t)module_feature_group_id << "\n";
+                            << module_name << ",feature_group,"
+                            << (uint64_t)module_feature_group_id << "\n";
 
   // Insert the features of each function into the database
   // Functions also inherit features from their encapsulating module
@@ -497,7 +497,7 @@ void featureExtractFinishUnit(void *, void *) {
         getContext().getDatabase().newFeatureSet(*func_feature_set);
     mageec::FeatureGroupID func_feature_group_id =
         getContext().getDatabase().newFeatureGroup({module_feature_set_id,
-																										func_feature_set_id});
+                                                    func_feature_set_id});
 
     getContext().getOutFile() << main_input_filename << ",function,"
                               << features.first << ",features,"
